@@ -145,7 +145,7 @@ A: The following table lists the Linux kernel versions against which the
        1.6.x      2.6.18 to 3.2
        1.7.x      2.6.18 to 3.3
        1.8.x      2.6.18 to 3.4
-       1.9.x      2.6.18 to 3.6
+       1.9.x      2.6.18 to 3.7
 
    Open vSwitch userspace should also work with the Linux kernel module
    built into Linux 3.3 and later.
